Set java compiler settings to v11 and upgraded jodd.